# distributed-rate-limiter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: leader_elector.h  redis_backend.h  sharded_rate_limiter.h  thread_safe_token_bucket.h  token_bucket.h
scripts/: leader_renew.lua  setup_windows.sh  token_bucket.lua
src/: bench_contention_main.cpp  bench_main.cpp  leader_elector.cpp  redis_backend.cpp  server_main.cpp  sharded_rate_limiter.cpp  thread_safe_token_bucket.cpp  token_bucket.cpp
tests/: leader_elector_header_check.cpp  manual_leader_election_test.cpp  manual_multi_key_stress_test.cpp  manual_redis_backend_test.cpp  manual_stress_test.cpp  redis_backend_header_check.cpp  redis_smoke_test.cpp
